[package]
name = "package-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
async-trait = "0.1.57"
serde_yaml = "0.9"
quick-xml = { version = "0.26.0", features = ["serialize", "async-tokio"] }
packageurl = "0.3.0"
url = "2.3.1"
fnmatch-regex = "0.2.0"
thiserror = "1.0.30"
requirements = "0.3.0"
configparser = "3.0.0"
cargo-manifest = "0.8.0"
cargo-lock = "9.0.0"
toml = "0.7.3"
opam-file-rs = "0.1.5"
python-pkginfo = "0.5.4"
serde-xml-rs = "0.6"
yarn-lock-parser = "0.7.0"
package-lock-json-parser = "0.4.0"
lib-ruby-parser = "4.0.2"
node-semver = "2.1.0"
maplit = "1.0.2"
tempfile = "3"
encoding_rs = "0.8.32"
which = "6.0.1"

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.59"
indexmap = { version = "1.8", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1"
log = "0.4.16"
nom = "7.1.1"
semver = "1.0.9"
anyhow = "1"
globset = "0.4"


tree-sitter = "0.22.6"
tree-sitter-python = "0.21.0"
tree-sitter-javascript = "0.21.4"
tree-sitter-typescript = "0.21.2"
tree-sitter-go = "0.21.0"
tree-sitter-c = "0.21.4"
tree-sitter-cpp = "0.22.3"
tree-sitter-rust = "0.21.2"
tree-sitter-ruby = "0.21.0"
tree-sitter-php = "0.22.8"
tree-sitter-c-sharp = "0.21.3"
tree-sitter-java = "0.21.0"
tree-sitter-bash = "0.21.0"

ignore = "0.4"


[dev-dependencies]

